force-app/main/default/objects/Contract_Discount__c/fields/Slab_reach_nego__c.field-meta.xml
<CustomField>
    <fullName>Slab_reach_nego__c</fullName>
    <formula>IF(Is_Conditional__c,case( slab_calc_method__c , 
&quot;TO&quot;,
IF(Base_TO_Nego__c &gt;= Slab_1__c  &amp;&amp;  (Base_TO_Nego__c &lt; Slab_2__c || ISBLANK(Slab_2__c)), 1 ,
IF(Base_TO_Nego__c &gt;= Slab_2__c  &amp;&amp;  (Base_TO_Nego__c &lt; Slab_3__c || ISBLANK(Slab_3__c)), 2 ,
IF(Base_TO_Nego__c &gt;= Slab_3__c  &amp;&amp;  (Base_TO_Nego__c &lt; Slab_4__c || ISBLANK(Slab_4__c)), 3 ,
IF(Base_TO_Nego__c &gt;= Slab_4__c  &amp;&amp;  (Base_TO_Nego__c &lt; Slab_5__c || ISBLANK(Slab_5__c)), 4 ,
IF(Base_TO_Nego__c &gt;= Slab_5__c  &amp;&amp;  (Base_TO_Nego__c &lt; Slab_6__c || ISBLANK(Slab_6__c)), 5 ,
IF(Base_TO_Nego__c &gt;= Slab_6__c, 6 , null)))))),
&quot;Prog TO&quot;, 
IF(Prog_TO_Nego__c*100 &gt;= Slab_1__c &amp;&amp; (Prog_TO_Nego__c*100 &lt; Slab_2__c || ISBLANK(Slab_2__c)), 1 , 
IF(Prog_TO_Nego__c*100 &gt;= Slab_2__c &amp;&amp; (Prog_TO_Nego__c*100 &lt; Slab_3__c || ISBLANK(Slab_3__c)), 2 , 
IF(Prog_TO_Nego__c*100 &gt;= Slab_3__c &amp;&amp; (Prog_TO_Nego__c*100 &lt; Slab_4__c || ISBLANK(Slab_4__c)), 3 , 
IF(Prog_TO_Nego__c*100 &gt;= Slab_4__c &amp;&amp; (Prog_TO_Nego__c*100 &lt; Slab_5__c || ISBLANK(Slab_5__c)), 4 , 
IF(Prog_TO_Nego__c*100 &gt;= Slab_5__c, 5 , null))))),
null),null)</formula>
    <label>Slab Reach - Nego</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>