force-app/main/default/objects/Contract_Discount__c/fields/Slab_Reach_Nego_Qty__c.field-meta.xml
<CustomField>
    <fullName>Slab_Reach_Nego_Qty__c</fullName>
    <formula>IF(Is_Conditional__c,case( slab_calc_method__c , 
&quot;Qty&quot;,

IF(Base_Quantity_Nego__c &gt;= Slab_1__c &amp;&amp; (Base_Quantity_Nego__c &lt; Slab_2__c || ISBLANK(Slab_2__c)), 1 ,
IF(Base_Quantity_Nego__c &gt;= Slab_2__c &amp;&amp; (Base_Quantity_Nego__c &lt; Slab_3__c || ISBLANK(Slab_3__c)), 2 ,
IF(Base_Quantity_Nego__c &gt;= Slab_3__c &amp;&amp; (Base_Quantity_Nego__c &lt; Slab_4__c || ISBLANK(Slab_4__c)), 3 ,
IF(Base_Quantity_Nego__c &gt;= Slab_4__c &amp;&amp; (Base_Quantity_Nego__c &lt; Slab_5__c || ISBLANK(Slab_5__c)), 4 ,
IF(Base_Quantity_Nego__c &gt;= Slab_5__c &amp;&amp; (Base_Quantity_Nego__c &lt; Slab_6__c || ISBLANK(Slab_6__c)), 5 ,
IF(Base_Quantity_Nego__c &gt;= Slab_6__c, 6 , null)))))),
&quot;Prog Qty&quot;, 

IF(Prog_Quantity_Nego__c &gt;= Slab_1__c &amp;&amp; (Prog_Quantity_Nego__c &lt; Slab_2__c || ISBLANK(Slab_2__c)), 1 , 
IF(Prog_Quantity_Nego__c &gt;= Slab_2__c &amp;&amp; (Prog_Quantity_Nego__c &lt; Slab_3__c || ISBLANK(Slab_3__c)), 2 , 
IF(Prog_Quantity_Nego__c &gt;= Slab_3__c &amp;&amp; (Prog_Quantity_Nego__c &lt; Slab_4__c || ISBLANK(Slab_4__c)), 3 , 
IF(Prog_Quantity_Nego__c &gt;= Slab_4__c &amp;&amp; (Prog_Quantity_Nego__c &lt; Slab_5__c || ISBLANK(Slab_5__c)), 4 , 
IF(Prog_Quantity_Nego__c &gt;= Slab_5__c &amp;&amp; (Prog_Quantity_Nego__c &lt; Slab_6__c || ISBLANK(Slab_6__c)), 5 , 
IF(Prog_Quantity_Nego__c &gt;= Slab_6__c, 6 , null)))))),
null),null)</formula>
    <label>Slab Reach - Nego Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>