force-app/main/default/objects/Contract_Discount__c/fields/slab_target__c.field-meta.xml
<CustomField>
    <fullName>slab_target__c</fullName>
    <label>Slab - Target</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>