force-app/main/default/objects/Contract_Discount__c/fields/Slab_Val_2__c.field-meta.xml
<CustomField>
    <fullName>Slab_Val_2__c</fullName>
    <label>Slab 2 - Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>