force-app/main/default/objects/Contract_Discount__c/fields/Slabs_List__c.field-meta.xml
<CustomField>
    <fullName>Slabs_List__c</fullName>
    <formula>TEXT(Slab_1__c) &amp; &apos;/&apos; &amp;TEXT(FLOOR(slab_per_1__c))&amp;&quot;.&quot;&amp;RIGHT(TEXT(slab_per_1__c*100), 2) &amp; &apos;/&apos; &amp;TEXT(Slab_val_1__c) &amp; &apos;/&apos; &amp;
TEXT(Slab_2__c) &amp; &apos;/&apos; &amp;TEXT(FLOOR(slab_per_2__c))&amp;&quot;.&quot;&amp;RIGHT(TEXT(slab_per_2__c*100), 2) &amp; &apos;/&apos; &amp;TEXT(Slab_Val_2__c) &amp; &apos;/&apos; &amp;
TEXT(Slab_3__c) &amp; &apos;/&apos; &amp;TEXT(FLOOR(slab_per_3__c))&amp;&quot;.&quot;&amp;RIGHT(TEXT(slab_per_3__c*100), 2) &amp; &apos;/&apos; &amp;TEXT(Slab_Val_3__c) &amp; &apos;/&apos; &amp;
TEXT(Slab_4__c) &amp; &apos;/&apos; &amp;TEXT(FLOOR(slab_per_4__c))&amp;&quot;.&quot;&amp;RIGHT(TEXT(slab_per_4__c*100), 2) &amp; &apos;/&apos; &amp;TEXT(Slab_Val_4__c) &amp; &apos;/&apos; &amp;
TEXT(Slab_5__c) &amp; &apos;/&apos; &amp;TEXT(FLOOR(slab_per_5__c))&amp;&quot;.&quot;&amp;RIGHT(TEXT(slab_per_5__c*100), 2) &amp; &apos;/&apos; &amp;TEXT(Slab_Val_5__c) &amp; &apos;/&apos; &amp;
TEXT(Slab_6__c) &amp; &apos;/&apos; &amp;TEXT(FLOOR(slab_per_6__c))&amp;&quot;.&quot;&amp;RIGHT(TEXT(slab_per_6__c*100), 2) &amp; &apos;/&apos; &amp;TEXT(slab_val_6__c) &amp; &apos;/&apos; &amp;
TEXT(Slab_7__c) &amp; &apos;/&apos; &amp;TEXT(FLOOR(slab_per_7__c))&amp;&quot;.&quot;&amp;RIGHT(TEXT(slab_per_7__c*100), 2) &amp; &apos;/&apos; &amp;TEXT(slab_val_7__c) &amp; &apos;/&apos; &amp;
TEXT(Slab_8__c) &amp; &apos;/&apos; &amp;TEXT(FLOOR(slab_per_8__c))&amp;&quot;.&quot;&amp;RIGHT(TEXT(slab_per_8__c*100), 2) &amp; &apos;/&apos; &amp;TEXT(slab_val_8__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Slabs List</label>
    <type>Text</type>
</CustomField>