force-app/main/default/objects/Contract_Discount__c/fields/Status_BDate__c.field-meta.xml
<CustomField>
    <fullName>Status_BDate__c</fullName>
    <description>Date that the status change</description>
    <inlineHelpText>Date that the status change</inlineHelpText>
    <label>Status Begin Date</label>
    <type>Date</type>
</CustomField>