force-app/main/default/objects/Contract_Discount__c/fields/TargetToMove_per__c.field-meta.xml
<CustomField>
    <fullName>TargetToMove_per__c</fullName>
    <description>Value of percent amount to transfer --&gt; Null = Total % amount (Value_per__c) of the row</description>
    <inlineHelpText>Value of percent amount to transfer --&gt; Null = Total % amount (Value_per__c) of the row</inlineHelpText>
    <label>Target To Move (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>