force-app/main/default/objects/Contract_Discount__c/fields/Total_Counteparts_Justified__c.field-meta.xml
<CustomField>
    <fullName>Total_Counteparts_Justified__c</fullName>
    <label>Total Counteparts Justified</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>