force-app/main/default/objects/Contract_Discount__c/fields/Total_Counterparts_to_Justify__c.field-meta.xml
<CustomField>
    <fullName>Total_Counterparts_to_Justify__c</fullName>
    <label>Total Counterparts to Justify</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>