force-app/main/default/objects/Contract_Discount__c/fields/unit_amount__c.field-meta.xml
<CustomField>
    <fullName>unit_amount__c</fullName>
    <label>Unit amount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>