force-app/main/default/objects/Contract_Discount__c/fields/Unit_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Amount_Type__c</fullName>
    <label>Unit_Amount_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Fac</valueSetName>
    </valueSet>
</CustomField>