force-app/main/default/objects/Contract_Discount__c/fields/Value_amt__c.field-meta.xml
<CustomField>
    <fullName>Value_amt__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>