force-app/main/default/objects/Contract_Discount__c/fields/Value_amt_approv_M11__c.field-meta.xml
<CustomField>
    <fullName>Value_amt_approv_M11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amount Appov M11</label>
    <type>Checkbox</type>
</CustomField>