force-app/main/default/objects/Contract_Discount__c/fields/Value_amt_disp_M10__c.field-meta.xml
<CustomField>
    <fullName>Value_amt_disp_M10__c</fullName>
    <label>Amount M10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>