force-app/main/default/objects/Contract_Discount__c/fields/Value_amt_event_M10__c.field-meta.xml
<CustomField>
    <fullName>Value_amt_event_M10__c</fullName>
    <label>Amount Event M10</label>
    <type>TextArea</type>
</CustomField>