force-app/main/default/objects/Contract_Discount__c/fields/Value_amt_event_M11__c.field-meta.xml
<CustomField>
    <fullName>Value_amt_event_M11__c</fullName>
    <label>Amount Event M11</label>
    <type>TextArea</type>
</CustomField>