force-app/main/default/objects/Contract_Discount__c/fields/Value_amt_Y2__c.field-meta.xml
<CustomField>
    <fullName>Value_amt_Y2__c</fullName>
    <description>Secure contract value for year+2</description>
    <inlineHelpText>Secure contract value for year+2</inlineHelpText>
    <label>Amount Y+2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>