force-app/main/default/objects/Contract_Discount__c/fields/Value_per__c.field-meta.xml
<CustomField>
    <fullName>Value_per__c</fullName>
    <label>%</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>