force-app/main/default/objects/Contract_Discount__c/fields/Value_per_Y2__c.field-meta.xml
<CustomField>
    <fullName>Value_per_Y2__c</fullName>
    <description>Secure contract value for year+2</description>
    <inlineHelpText>Secure contract value for year+2</inlineHelpText>
    <label>% Y+2</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>