force-app/main/default/objects/Contract_Discount__c/fields/Value_per_Y3__c.field-meta.xml
<CustomField>
    <fullName>Value_per_Y3__c</fullName>
    <description>Secure contract value for year+3</description>
    <inlineHelpText>Secure contract value for year+3</inlineHelpText>
    <label>% Y+3</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>