force-app/main/default/objects/Contract_Discount__c/fields/Value_SubAmt1__c.field-meta.xml
<CustomField>
    <fullName>Value_SubAmt1__c</fullName>
    <label>Value SubAmt1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>