force-app/main/default/objects/Contract_Discount__c/fields/Value_SubAmt2__c.field-meta.xml
<CustomField>
    <fullName>Value_SubAmt2__c</fullName>
    <formula>Value_amt__c -  Value_SubAmt1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value SubAmt2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>