force-app/main/default/objects/Contract_Discount__c/fields/Value_SubPerc1__c.field-meta.xml
<CustomField>
    <fullName>Value_SubPerc1__c</fullName>
    <label>Value SubPerc1</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>