force-app/main/default/objects/Contract_Discount__c/fields/Value_SubPerc2__c.field-meta.xml
<CustomField>
    <fullName>Value_SubPerc2__c</fullName>
    <formula>Value_per__c/100 -  Value_SubPerc1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value SubPerc2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>