force-app/main/default/objects/Contract_Discount__c/fields/X2015_Nego_p__c.field-meta.xml
<CustomField>
    <fullName>X2015_Nego_p__c</fullName>
    <label>Y % Nego</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>