force-app/main/default/objects/Contract_Discount__c/fields/YTD_FX__c.field-meta.xml
<CustomField>
    <fullName>YTD_FX__c</fullName>
    <formula>IF(NOT(ISBLANK(Base_TO_Forecast__c)), Base_TO_Forecast__c * Value_per__c/100 + Value_amt__c, Value_amt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD FX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>