force-app/main/default/objects/Contract_Discount__c/fields/YTD_Nego__c.field-meta.xml
<CustomField>
    <fullName>YTD_Nego__c</fullName>
    <formula>IF ( Is_Tariff_Condition__c = TRUE,

Base_TO_Tariff_Nego__c * Value_per__c/100,
Base_TO_Nego__c * Value_per__c/100 )

+ (Value_amt__c -
IF(Is_Excluded_To_Nego_Base_F__c,IF(Exclusion_to_Nego_Base_Value__c==0,Value_amt__c,Exclusion_to_Nego_Base_Value__c) ,0))* IF( Base_TO_Nego_YearBase__c &lt;&gt; 0 &amp;&amp; Is_Yearly_Condition__c, Base_TO_Nego__c /Base_TO_Nego_YearBase__c, 1)

+ Base_Quantity_Nego__c * unit_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Nego</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>