force-app/main/default/objects/Contract_Discount__c/fields/YTD_Nego_Computed__c.field-meta.xml
<CustomField>
    <fullName>YTD_Nego_Computed__c</fullName>
    <label>YTD Nego Computed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>