force-app/main/default/objects/Contract_Discount__c/fields/YTD_Nego_perc2__c.field-meta.xml
<CustomField>
    <fullName>YTD_Nego_perc2__c</fullName>
    <formula>If( Index__c = &apos;Index1&apos;, 

IF (Contract__r.Total_TO_Tariff_Nego__c = 0, 
        IF( Value_per__c &lt;&gt;0, Value_per__c/100, Null),
        YTD_Nego__c/ Contract__r.Total_TO_Tariff_Nego__c), 


IF ( Contract__r.Total_TO__c = 0, 
        IF( Value_per__c &lt;&gt;0, Value_per__c/100, Null), 
        YTD_Nego__c / Contract__r.Total_TO__c )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Nego %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>