force-app/main/default/objects/Contract_Discount__c/fields/YTD_Nego_perc__c.field-meta.xml
<CustomField>
    <fullName>YTD_Nego_perc__c</fullName>
    <formula>YTD_Nego__c /  Base_TO_Nego__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Nego %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>