force-app/main/default/objects/Contract_Discount__c/recordTypes/Discount_Detail.recordType-meta.xml
<RecordType>
    <fullName>Discount_Detail</fullName>
    <active>true</active>
    <label>Discount Detail</label>
</RecordType>