force-app/main/default/objects/Contract_Discount__c/recordTypes/Proof_with_counterparty.recordType-meta.xml
<RecordType>
    <fullName>Proof_with_counterparty</fullName>
    <active>true</active>
    <description>Following the selected condition, some counterparties are requested</description>
    <label>With Counterparty</label>
</RecordType>