force-app/main/default/objects/Contract_Discount__c/recordTypes/Proof_without_counterparty.recordType-meta.xml
<RecordType>
    <fullName>Proof_without_counterparty</fullName>
    <active>true</active>
    <description>Following the selected condition, no counterparty is requested</description>
    <label>Without Counterparty</label>
</RecordType>