force-app/main/default/objects/Contract_Discount__c/recordTypes/Signed.recordType-meta.xml
<RecordType>
    <fullName>Signed</fullName>
    <active>true</active>
    <description>Record type used when a contract line is approved by all the approvers and status set as &apos;Signed&apos;</description>
    <label>Signed</label>
</RecordType>