force-app/main/default/objects/Contract_Discount__c/recordTypes/Sub_Term_To_Be_Signed.recordType-meta.xml
<RecordType>
    <fullName>Sub_Term_To_Be_Signed</fullName>
    <active>true</active>
    <label>Sub Term To Be Signed</label>
</RecordType>