force-app/main/default/objects/Contract_Discount__c/recordTypes/To_Be_Signed.recordType-meta.xml
<RecordType>
    <fullName>To_Be_Signed</fullName>
    <active>true</active>
    <description>Record type used when a contract line is in a status different than &apos;Signed&apos;</description>
    <label>To Be Signed</label>
</RecordType>